[package]
name = "crustyballz"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

solana-client = "1.10.32"
solana-sdk = "1.10.32"
tokio = { version = "1", features = ["full"] }
socketioxide = "0.13.1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tower-http = {version = "0.5.2", features = ["cors", "compression-full"]}
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19.0"
fern = "0.6.2"
log = "0.4.21"
time = "0.3.36"
lazy_static = "1.4.0"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
clap = { version = "4.5.7", features = ["derive"] }
# socket.io client impl
rust_socketio = { version = "*", features = ["async"] }
native-tls = "0.2.12"
tokio-timerfd = "0.2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
